<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GopherHunting">

    <TextView
        android:id="@+id/gameCurrPlayerTxt"
        android:layout_width="163dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/gameTextP1"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/gameCurrModeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="135dp"
        android:text="@string/gameTextMode"
        android:textSize="24sp" />

    <Button
        android:id="@+id/gameChangeMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="46dp"
        android:layout_marginBottom="57dp"
        android:text="@string/gameButtonTxt"
        android:textSize="18sp" />

    <GridView
        android:id="@+id/gameGrid"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="45dp"
        android:background="@android:color/black"
        android:numColumns="10" />

    <Button
        android:id="@+id/playGameButton"
        android:layout_width="126dp"
        android:layout_height="65dp"
        android:layout_centerInParent="true"
        android:text="@string/playGameBtn" />

    <Button
        android:id="@+id/nextGuessBtn"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="58dp"
        android:text="@string/gameButton2Txt" />
</RelativeLayout>